--- a/Gemini-paper.Rmd
+++ b/Gemini-paper.Rmd
@@ -19,10 +19,18 @@ theme_set(theme_pubr())
 
 This script calculates numbers excluded from the analysis per category, demographic information, detailed information on the cancers detected and on the additionally arbitrated cases.
 
+# Create dummy data
+
+```{r}
+# generate a dummy data set called "data"
+source("create_dummy_data.R")
+```
+
 # Load data and define AI operating points
 
 ```{r load-data}
-data <- readRDS("evaluation_dataset.rds")
+## load data statement commented out so code can run with generated dummy data
+#data <- readRDS("evaluation_dataset.rds")
 
 ## stats functions
 source("calc-performance-functions.R")
